add strong and italic, mascot image, hawks webpage link

--- a/Favorite-basketball-teams.html
+++ b/Favorite-basketball-teams.html
@@ -4,15 +4,16 @@
     <title>Colin's Favorite Teams</title>
   </head>
   <body>
-    <h1>Colin's Favorite Basketball Teams</h1>
+    <h1>Colin's <em>Favorite</em> Basketball Teams</h1>
     <p>The following is a list of the most decorated NBA teams, in my humble opinion:</p>
     <ul>
       <li>Golden State Warriors</li>
       <li>Cleveland Cavaliers</li>
-      <li>Atlanta Hawks</li>
+      <li><a href="http://www.nba.com/hawks/">Atlanta Hawks</a></li>
     </ul>
+    <img src="img/harryhawk.jpg" alt="Harry the hawk, Atlanta Hawks mascot.">
     <h2>Favorite Players</h2>
-    <p>The following players are ranked in both overall skill and importance to team:</p>
+    <p>The following players are ranked in both <strong>overall skill</strong> and <strong>importance to team</strong>:</p>
     <ol>
       <li>Stephen Curry</li>
       <li>LeBron James</li>
