--- a/Favorite-basketball-teams.html
+++ b/Favorite-basketball-teams.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-<link href="css/styles.css" rel="stylesheet" type="text/css"
+<link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Colin's Favorite Teams</title>
   </head>
   <body>
